# elftree

./: CMakeLists.txt  LICENSE  README.md  elftree.manifest
cmake/Modules/: ApplyPkgConfig.cmake
elftree/: CMakeLists.txt  rpmtree
elftree/include/: addrdump_text_editor.h  alert_window.hpp  elf_arch.h  elf_util.h  elfinfo.h  elftree.h  elfutil.h  info_window.h  menu_window.h  section_selector.h  tree_selector.h  tui.h  window.h
elftree/src/: addrdump_text_editor.cc  elf_util.cc  elfinfo.cc  elftree.cc  elfutil.cc  info_window.cc  main.cc  menu_window.cc  section_selector.cc  tree_selector.cc  tui.cc  window.cc
include/: rpm_tree_tui.h
lib/: CMakeLists.txt
packaging/: elftree.spec
rpmtree/: CMakeLists.txt
rpmtree/include/: elf_util.h  rpm_tree_tui.h
rpmtree/src/: elf_util.cc  main.cc  rpm_util.cc  tui.cc
src/: main.cc
test/: CMakeLists.txt
test/src/: googletest_approval_main.cc  test_arch.h  test_elfinfo.cc  test_elftree.ElfInfoTest.test_getElfHeaderFormat.approved.txt  test_elftree.ElfInfoTest.test_getElfProgramHeaderFormat.approved.txt  test_elftree.ElfInfoTest.test_getSectionHeaderFormat.approved.txt  test_elftree.cc  test_elfutil.cc  test_info_window.cc  test_main.cc  test_menu_window.cc  test_tree_selector.cc
test/src/approval_tests_aarch64/: elftest  test_elfinfo.ElfInfoTest.test_getElfHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getProgramHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionDumpFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionList.approved.txt
test/src/approval_tests_armv7l/: elftest  test_elfinfo.ElfInfoTest.test_getElfHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getProgramHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionDumpFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionList.approved.txt
test/src/approval_tests_i586/: elftest  test_elfinfo.ElfInfoTest.test_getElfHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getProgramHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionDumpFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionList.approved.txt
test/src/approval_tests_x86_64/: elftest  test_elfinfo.ElfInfoTest.test_getElfHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getProgramHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionDumpFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionHeaderFormat.approved.txt  test_elfinfo.ElfInfoTest.test_getSectionList.approved.txt
test/testdata/: nonelf
