SET(EXTRA_CXX_FLAGS "${EXTRA_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXX_FLAGS} -Wall -Winline -g -fPIE -fno-omit-frame-pointer")

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SOURCES)

ADD_EXECUTABLE(${TARGET_ELFTREE} ${SOURCES})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

APPLY_PKG_CONFIG(${TARGET_ELFTREE} PUBLIC
	NCURSES_DEPS
	NCURSES_MENU_DEPS
	NCURSES_FORM_DEPS
	Boost
)

INSTALL(TARGETS ${TARGET_ELFTREE} DESTINATION bin)

# Static library for gtest
SET(LIBSOURCES "${SOURCES}")
LIST(REMOVE_ITEM LIBSOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc")
ADD_LIBRARY(${ELFTREE_STATIC_LIB} STATIC ${LIBSOURCES})
APPLY_PKG_CONFIG(${ELFTREE_STATIC_LIB} PUBLIC
	NCURSES_DEPS
	NCURSES_MENU_DEPS
	NCURSES_FORM_DEPS
	Boost
)
