SET(EXTRA_CXX_FLAGS "${EXTRA_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXX_FLAGS} -Wall -Winline -g -fPIE -fno-omit-frame-pointer")

SET(MAIN_SOURCE
	"${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc"
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SOURCES)
LIST(REMOVE_ITEM SOURCES ${MAIN_SOURCE})

ADD_LIBRARY(${ELFTREE_STATIC_LIB} STATIC ${SOURCES})
APPLY_PKG_CONFIG(${ELFTREE_STATIC_LIB} PUBLIC
	NCURSES_DEPS
	NCURSES_MENU_DEPS
	NCURSES_FORM_DEPS
	Boost
)

ADD_EXECUTABLE(${TARGET_ELFTREE} ${MAIN_SOURCE})
TARGET_LINK_LIBRARIES(${TARGET_ELFTREE} PUBLIC ${ELFTREE_STATIC_LIB})
INSTALL(TARGETS ${TARGET_ELFTREE} DESTINATION bin)
