ENABLE_TESTING()

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src UNIT_TESTS_SRCS)

ADD_EXECUTABLE(${TARGET_RPMTREE_UNIT_TEST} ${UNIT_TESTS_SRCS})

TARGET_INCLUDE_DIRECTORIES(${TARGET_RPMTREE_UNIT_TEST} PUBLIC
  "${CMAKE_CURRENT_SOURCE_DIR}/../rpmtree/include"
)

TARGET_LINK_LIBRARIES(${TARGET_RPMTREE_UNIT_TEST} PUBLIC ${TARGET_RPMTREE})
SET_TARGET_PROPERTIES(${TARGET_RPMTREE_UNIT_TEST} PROPERTIES COMPILE_FLAGS "-fPIE -fvisibility=default")
SET_TARGET_PROPERTIES(${TARGET_RPMTREE_UNIT_TEST} PROPERTIES LINK_FLAGS "-pie")

ADD_TEST(
  NAME ${TARGET_RPMTREE_UNIT_TEST}
  COMMAND ${TARGET_RPMTREE_UNIT_TEST}
)
