ENABLE_TESTING()

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src UNIT_TESTS_SRCS)

ADD_EXECUTABLE(${TARGET_ELFTREE_UNIT_TEST} ${UNIT_TESTS_SRCS})

TARGET_LINK_LIBRARIES(${TARGET_ELFTREE_UNIT_TEST} PUBLIC
	lib
	${ELFTREE_STATIC_LIB}
)

APPLY_PKG_CONFIG(${TARGET_ELFTREE_UNIT_TEST} PUBLIC
	Boost
	GTEST_DEPS
)

TARGET_INCLUDE_DIRECTORIES(${TARGET_ELFTREE_UNIT_TEST} PUBLIC
  "${CMAKE_CURRENT_SOURCE_DIR}/../elftree/include"
)

SET_TARGET_PROPERTIES(${TARGET_ELFTREE_UNIT_TEST} PROPERTIES COMPILE_FLAGS "-fPIE -fvisibility=default")
SET_TARGET_PROPERTIES(${TARGET_ELFTREE_UNIT_TEST} PROPERTIES LINK_FLAGS "-pie")

ADD_TEST(
  NAME ${TARGET_ELFTREE_UNIT_TEST}
  COMMAND ${TARGET_ELFTREE_UNIT_TEST}
)
